--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,21 @@
 [tox]
 minversion=3.2.4
-envlist = py36, py37, py38, py39, linters
 
 [flake8]
 max-complexity = 10
 filename = ./redisplus/**
 ignore = W292
+show-source = true
+
+[linters]
+commands = |
+    flake8
+    vulture redisplus --min-confidence 80
+    bandit redisplus/**
+
+[testenv:unmarked]
+commands = pytest -m unmarked
+
+[testenv:redisearch]
+deps =  redisearch
+commands = pytest -m redisearch
