--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [tool.poetry]
 name = "redisplus"
 version = "0.1.0"
-description = ""
+description = "An all purpose client for redis modules."
+keywords = ["redis"]
 authors = ["RedisLabs OSS <oss@redislabs.com>"]
 
 [tool.poetry.dependencies]
@@ -14,13 +15,19 @@ redisgraph = {version = "^2.4.0", optional = true}
 redistimeseries = {version = "^1.4.3", optional = true}
 
 [tool.poetry.dev-dependencies]
-# flake8 = "^3.9.2"
-# bandit = "^1.7.0"
-# vulture = "^2.3"
-# tox = "^3.24.0"
-# tox-poetry = "^0.4.0"
+flake8 = "^3.9.2"
+bandit = "^1.7.0"
+vulture = "^2.3"
+tox = "^3.24.0"
+tox-poetry = "^0.4.0"
 pytest = "^6.2.0"
-pytest-mock = "^3.6.1"
+flake8-docstrings = "^1.6.0"
+mock = "^4.0.3"
+
+[tool.pytest.ini_options]
+markers = [
+    "redisearch: only redisearch tests"
+]
 
 [build-system]
 requires = ["poetry-core>=1.1.0"]
