--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ mock = "^4.0.3"
 
 [tool.pytest.ini_options]
 markers = [
-    "redisearch: only redisearch tests"
+    "redisearch: only redisearch tests",
+    "unmarked: tests that are not limited to a specific module"
 ]
 
 [build-system]
