--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ tox-poetry = "^0.4.0"
 pytest = "^6.2.0"
 flake8-docstrings = "^1.6.0"
 mock = "^4.0.3"
+black = "^21.7b0"
 
 [tool.poetry.extras]
 redisearch = ["redisearch"]
