adding black to the linters

--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,14 @@ minversion=3.2.4
 [flake8]
 max-complexity = 10
 filename = ./redisplus/**
-ignore = W292
+ignore = W292, E501
+exclude = src/conftest.py
 show-source = true
 
 [linters]
 commands = |
     flake8
+    black --check --diff src
     vulture redisplus --min-confidence 80
     bandit redisplus/**
 
