--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,14 @@
 [tox]
 minversion=3.2.4
 
+[docker:redismod]
+image = redislabs/redismod:edge
+healthcheck_timeout = 1
+healthcheck_interval = 2
+healthcheck_retries = 5
+ports = 
+    6379:6379/tcp
+
 [flake8]
 max-complexity = 10
 filename = ./redisplus/**
@@ -15,9 +23,20 @@ commands = |
     vulture redisplus --min-confidence 80
     bandit redisplus/**
 
+# module less tests
 [testenv:unmarked]
 commands = pytest -m unmarked
 
+# module specified tests
 [testenv:redisearch]
-deps =  redisearch
+pre_commands = 
+    poetry install -E redisearch
 commands = pytest -m redisearch
+
+# any tests marked as needing an active redis, with all the modules
+[testenv:integrations]
+pre_commands = 
+    poetry install -E redismodules
+commands = pytest -m integrations
+docker = 
+    redismod
