first json tests using the embedded module

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ image = redislabs/redismod:edge
 healthcheck_timeout = 1
 healthcheck_interval = 2
 healthcheck_retries = 5
-ports = 
+ports =
     6379:6379/tcp
 
 [flake8]
@@ -29,14 +29,14 @@ commands = pytest -m unmarked
 
 # module specified tests
 [testenv:redisearch]
-pre_commands = 
+pre_commands =
     poetry install -E redisearch
 commands = pytest -m redisearch
 
 # any tests marked as needing an active redis, with all the modules
 [testenv:integrations]
-pre_commands = 
+pre_commands =
     poetry install -E redismodules
-commands = pytest -m integrations
-docker = 
+commands = pytest -m integrations -s
+docker =
     redismod
