--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,13 @@ commands = |
     vulture redisplus --min-confidence 80
     bandit redisplus/**
 
+# all tests
+[testenv:all]
+docker =
+    redismod
+pre_commands = poetry install -E redismodules
+commands = pytest
+
 # module less tests
 [testenv:unmarked]
 commands = pytest -m unmarked
