--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,11 @@ flake8-docstrings = "^1.6.0"
 mock = "^4.0.3"
 black = "^21.7b0"
 tox-docker = "^3.0.0"
+Sphinx = "^4.1.2"
+sphinx-rtd-theme = "^0.5.2"
+readthedocs-sphinx-search = "^0.1.0"
+sphinx-autoapi = "^1.8.3"
+toml = "^0.10.2"
 
 [tool.poetry.extras]
 redisearch = ["redisearch"]
@@ -62,7 +67,9 @@ markers = [
 ]
 
 [tool.poetry.urls]
-repository = "https://github.com/redislabsmodules/redisplus-py"
+"Project URL" = ""
+Repository = "https://github.com/redislabsmodules/redisplus-py"
+Documentation = "https://redisplus.readhtedocs.io"
 
 [build-system]
 requires = ["poetry-core>=1.1.0"]
