modules and changes

--- a/tox.ini
+++ b/tox.ini
@@ -17,11 +17,11 @@ exclude = src/conftest.py
 show-source = true
 
 [testenv:linters]
-commands = |
+commands = 
     flake8
     black --check --diff src
-    vulture redisplus --min-confidence 80
-    bandit redisplus/**
+    vulture src --min-confidence 80
+    bandit src/**
 
 # all tests
 [testenv:all]
@@ -33,12 +33,6 @@ commands = pytest
 # module less tests
 [testenv:unmarked]
 commands = pytest -m unmarked
-
-# module specified tests
-[testenv:redisearch]
-pre_commands =
-    poetry install -E redisearch
-commands = pytest -m redisearch
 
 # any tests marked as needing an active redis, with all the modules
 [testenv:integrations]
