--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,10 @@
 [tox]
 minversion=3.2.4
+envlist = {py27,py35,py36,py37,py38,py,py3}-{plain,hiredis}, linters
 
-[docker:redismod]
+[docker:redismodtox]
 image = redislabs/redismod:edge
+healthcheck_comd = nc -z 127.0.0.1 6379
 healthcheck_timeout = 1
 healthcheck_interval = 2
 healthcheck_retries = 5
@@ -17,27 +19,18 @@ exclude = src/conftest.py
 show-source = true
 
 [testenv:linters]
-commands = 
+skipsdist = true
+commands =
     flake8
     black --check --diff src
     vulture src --min-confidence 80
     bandit src/**
 
 # all tests
-[testenv:all]
+[testenv]
 docker =
-    redismod
-pre_commands = poetry install -E redismodules
-commands = pytest
-
-# module less tests
-[testenv:unmarked]
-commands = pytest -m unmarked
-
-# any tests marked as needing an active redis, with all the modules
-[testenv:integrations]
+    redismodtox
 pre_commands =
+    docker stop redismodtox || exit 0  # just in case
     poetry install -E redismodules
-commands = pytest -m integrations -s
-docker =
-    redismod
+commands = pytest
