--- a/tox.ini
+++ b/tox.ini
@@ -33,4 +33,4 @@ docker =
 pre_commands =
     docker stop redismodtox || exit 0  # just in case
     poetry install -E redismodules
-commands = pytest
+commands = pytest {posargs}
