--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,16 @@ keywords = ["redis"]
 authors = ["RedisLabs OSS <oss@redislabs.com>"]
 license = "BSD-3-Clause"
 
-exclude = ["src/modules/"]
-packages = [
-
-]
-
 classifiers = [
     'Topic :: Database',
     'Programming Language :: Python',
     'Intended Audience :: Developers',
+    'Programming Language :: Python :: 3.6',
+    'Programming Language :: Python :: 3.7',
+    'Programming Language :: Python :: 3.8',
     'Programming Language :: Python :: 3.9',
     'License :: OSI Approved :: BSD License',
-    'Development Status :: 3 - Alpha'
+    'Development Status :: 3 - Alpha',
 ]
 
 [tool.poetry.dependencies]
