tox action for docs

--- a/tox.ini
+++ b/tox.ini
@@ -34,3 +34,6 @@ pre_commands =
     docker stop redismodtox || exit 0  # just in case
     poetry install -E redismodules
 commands = pytest
+
+[testenv:docs]
+commands = make html
