--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,8 +44,8 @@ tox-pyenv = "^1.1.0"
 Sphinx = "^4.1.2"
 sphinx-rtd-theme = "^0.5.2"
 readthedocs-sphinx-search = "^0.1.0"
-sphinx-autoapi = "^1.8.3"
 toml = "^0.10.2"
+sphinx-automodapi = "^0.13"
 
 [tool.poetry.extras]
 redisearch = ["redisearch"]
