--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion=3.2.4
-envlist = {py27,py35,py36,py37,py38,py,py3}-{plain,hiredis}, linters
+envlist = {py36,py37,py38,py,py3}-{plain,hiredis}, linters
 
 [docker:redismodtox]
 image = redislabs/redismod:edge
