invoke for tasks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ sphinx-rtd-theme = "^0.5.2"
 readthedocs-sphinx-search = "^0.1.0"
 toml = "^0.10.2"
 sphinx-automodapi = "^0.13"
+invoke = "^1.6.0"
 
 [tool.poetry.extras]
 redisearch = ["redisearch"]
