--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion=3.2.4
-envlist = {py36,py37,py38,py,py3}-{plain,hiredis}, linters
+envlist=linters, integrations, docs
 
 [docker:redismodtox]
 image = redislabs/redismod:edge
@@ -27,7 +27,7 @@ commands =
     bandit src/**
 
 # all tests
-[testenv]
+[testenv:integrations]
 docker =
     redismodtox
 pre_commands =
