black changes to clean lint!

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ commands =
     flake8
     black --check --diff src
     vulture src --min-confidence 80
-    bandit src/**
+    bandit -r src
 
 # all tests
 [testenv:integrations]
