--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ minversion=3.2.4
 envlist=linters, integrations, docs
 
 [docker:redismodtox]
-image = {[main]docker_name}
+image = redislabs/redismod:edge
 healthcheck_comd = nc -z 127.0.0.1 6379
 healthcheck_timeout = 1
 healthcheck_interval = 2
