--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,15 +19,15 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6.2"
+python = ">=3.6.2,<3.10"
 
-# redisearch = {version = "^2.0.0", optional = true}
-# rejson = {version = "^0.5.4", optional = true}
-# redisai = {version = "^1.0.2", optional = true}
-# redisgraph = {version = "^2.4.0", optional = true}
-# redistimeseries = {version = "^1.4.3", optional = true}
-# redisbloom = {version = "^0.4.0", optional = true}
-# redis = {git = "https://github.com/chayim/redis-py", rev = "ck-commandmig"}
+redisearch = {version = "^2.0.0", optional = true}
+rejson = {version = "^0.5.4", optional = true}
+redisai = {version = "^1.0.2", optional = true}
+redisgraph = {version = "^2.4.0", optional = true}
+redistimeseries = {version = "^1.4.3", optional = true}
+redisbloom = {version = "^0.4.0", optional = true}
+redis = {git = "https://github.com/chayim/redis-py", rev = "ck-commandmig"}
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.2"
@@ -73,6 +73,12 @@ markers = [
 [tool.poetry.urls]
 Repository = "https://github.com/redislabsmodules/redisplus-py"
 Documentation = "https://redisplus.readhtedocs.io"
+
+[[tool.mypy.overrides]]
+module = [
+    "src",
+]
+ignore_missing_imports = true
 
 [build-system]
 requires = ["poetry-core>=1.0.3"]
