removed src directory for top-level module dir

--- a/tox.ini
+++ b/tox.ini
@@ -15,16 +15,16 @@ ports =
 max-complexity = 10
 filename = ./redisplus/**
 ignore = W292, E501
-exclude = src/conftest.py
+exclude = conftest.py
 show-source = true
 
 [testenv:linters]
 skipsdist = true
 commands =
     flake8
-    black --check --diff src
-    vulture src --min-confidence 80
-    bandit -r src
+    black --check --diff redisplus
+    vulture redisplus --min-confidence 80
+    bandit -r redisplus
 
 # all tests
 [testenv:integrations]
