--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ vulture = "^2.3"
 tox = "^3.24.0"
 tox-poetry = "^0.4.0"
 pytest = "^6.2.0"
-flake8-docstrings = "^1.6.0"
+# flake8-docstrings = "^1.6.0"
 mock = "^4.0.3"
 black = "^21.7b0"
 tox-docker = "^3.0.0"
