--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ markers = [
     "redisjson: only redisjson tests",
     "redisbloom: only redisbloom tests",
     "redisai: only redisai tests",
+    "redisaidag: only redisai tests with dag",
     "unmarked: tests that are not limited to a specific module",
 
     "integrations: run integration tests against a redis docker",
