flake8 fix for utf decode

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ show-source = true
 [testenv:linters]
 skipsdist = true
 commands =
-    flake8
+    flake8 redisplus
     black --check --diff redisplus
     vulture redisplus --min-confidence 80
     bandit -r redisplus
