--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ show-source = true
 skipsdist = true
 commands =
     flake8 redisplus/*
-    black --check --diff redisplus
+    black --check --diff redisplus tests
     vulture redisplus --min-confidence 80
     bandit -r redisplus
 
