--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ ports =
 [flake8]
 max-complexity = 10
 filename = ./redisplus/**
-ignore = W292, E501,D104,D100
+ignore = W292, E501,D104,D100,D105,D205,D400
 exclude = conftest.py
 show-source = true
 
