flake8 and vulture fixes for lints

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ ports =
 
 [flake8]
 max-complexity = 10
-filename = ./redisplus/**
+filename = {toxinidir}/redisplus
 ignore = W292, E501,D104,D100,D105,D205,D400
 exclude = conftest.py
 show-source = true
@@ -21,10 +21,10 @@ show-source = true
 [testenv:linters]
 skipsdist = true
 commands =
-    flake8 redisplus/*
-    black --check --diff redisplus tests
-    vulture redisplus --min-confidence 80
-    bandit -r redisplus
+    flake8
+    black --check --diff {toxinidir}/redisplus {toxinidir}/tests
+    vulture --min-confidence 80 {toxinidir}/redisplus whitelist.py
+    bandit -r {toxinidir}/redisplus
 
 # all tests
 [testenv:integrations]
