--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ markers = [
     "timeseries: only redistimeseries tests",
     "ai: only redisai tests",
     "aidag: only redisai tests with dag",
+    "search: only redisearch tests",
     "unmarked: tests that are not limited to a specific module",
 
     "integrations: run all tests that require a running redis",
