renaming json commands to match redisjson, and other select formatting changes
closes #73

--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,8 @@ ports =
 
 [flake8]
 max-complexity = 10
-filename = {toxinidir}/redisplus
-ignore = W292, E501,D104,D100,D105,D205,D400
+filename = {toxinidir}/redisplus, {toxinidir}/tests
+ignore = W292,E501,F403,F405
 exclude = conftest.py
 show-source = true
 
@@ -33,7 +33,7 @@ docker =
 pre_commands =
     docker stop redismodtox || exit 0  # just in case
     poetry install -E redismodules
-commands = pytest
+commands = pytest {posargs}
 
 [testenv:docs]
 commands = make html
