--- a/.github/workflows/tox-build.yml
+++ b/.github/workflows/tox-build.yml
@@ -68,7 +68,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.7
-        uses: actions/cache@v2
+      - uses: actions/cache@v2
         with:
           path: |
             .tox
